Have conn window title match menu entries

--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkWindow" id="vmm-host">
     <property name="visible">True</property>
-    <property name="title" translatable="yes">Host Details</property>
+    <property name="title" translatable="yes">Connection Details</property>
     <property name="default_width">750</property>
     <property name="default_height">500</property>
     <signal name="delete_event" handler="on_vmm_host_delete_event"/>
