--- a/src/vmm-clone.glade
+++ b/src/vmm-clone.glade
@@ -882,6 +882,7 @@ uses the existing disk image for both the original and the new machine.&lt;/span
                 </child>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
