prefs: Remove console popup option
This was originally requested when the console window didn't have option to
start/stop a VM (see https://bugzilla.redhat.com/show_bug.cgi?id=211385).
That hasn't been valid for a long time. The option was pretty unclear in
the prefs dialog anyways, and had weird behavior like 'open the domain for
all running vms when we start virt-manager'

Just always use the current default of opening the console for VMs that
we create with New VM.

--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -322,7 +322,7 @@
                         <child>
                           <widget class="GtkTable" id="table3">
                             <property name="visible">True</property>
-                            <property name="n_rows">6</property>
+                            <property name="n_rows">4</property>
                             <property name="row_spacing">3</property>
                             <child>
                               <widget class="GtkComboBox" id="prefs-console-scaling">
@@ -333,8 +333,8 @@ Always</property>
                                 <signal name="changed" handler="on_prefs_console_scaling_changed"/>
                               </widget>
                               <packing>
-                                <property name="top_attach">3</property>
-                                <property name="bottom_attach">4</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
                                 <property name="x_padding">5</property>
                               </packing>
                             </child>
@@ -345,33 +345,6 @@ Always</property>
                                 <property name="label" translatable="yes">Graphical console _scaling:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-console-scaling</property>
-                              </widget>
-                              <packing>
-                                <property name="top_attach">2</property>
-                                <property name="bottom_attach">3</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <widget class="GtkComboBox" id="prefs-console-popup">
-                                <property name="visible">True</property>
-                                <property name="items" translatable="yes">Never
-For all new domains
-For all domains</property>
-                                <signal name="changed" handler="on_prefs_console_popup_changed"/>
-                              </widget>
-                              <packing>
-                                <property name="top_attach">1</property>
-                                <property name="bottom_attach">2</property>
-                                <property name="x_padding">5</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <widget class="GtkLabel" id="label5">
-                                <property name="visible">True</property>
-                                <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Automatically _open consoles:</property>
-                                <property name="use_underline">True</property>
-                                <property name="mnemonic_widget">prefs-console-popup</property>
                               </widget>
                             </child>
                             <child>
@@ -414,8 +387,8 @@ For all domains</property>
                                 </child>
                               </widget>
                               <packing>
-                                <property name="top_attach">4</property>
-                                <property name="bottom_attach">5</property>
+                                <property name="top_attach">2</property>
+                                <property name="bottom_attach">3</property>
                               </packing>
                             </child>
                             <child>
@@ -448,8 +421,8 @@ For all domains</property>
                                 </child>
                               </widget>
                               <packing>
-                                <property name="top_attach">5</property>
-                                <property name="bottom_attach">6</property>
+                                <property name="top_attach">3</property>
+                                <property name="bottom_attach">4</property>
                               </packing>
                             </child>
                           </widget>
@@ -536,48 +509,31 @@ For all domains</property>
                                 <property name="label" translatable="yes">Install Audio Device:</property>
                               </widget>
                             </child>
-
                             <child>
                               <widget class="GtkLabel" id="label162">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Install Graphics:</property>
-                                <property name="use_underline">False</property>
-                                <property name="use_markup">False</property>
-                                <property name="justify">GTK_JUSTIFY_LEFT</property>
-                                <property name="wrap">False</property>
-                                <property name="selectable">False</property>
                                 <property name="xalign">0</property>
-                                <property name="yalign">0.5</property>
-                                <property name="xpad">0</property>
-                                <property name="ypad">0</property>
-                                <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-                                <property name="width_chars">-1</property>
-                                <property name="single_line_mode">False</property>
-                                <property name="angle">0</property>
+                                <property name="label" translatable="yes">Install Graphics:</property>
                               </widget>
                               <packing>
-                                <property name="left_attach">0</property>
-                                <property name="right_attach">1</property>
                                 <property name="top_attach">2</property>
                                 <property name="bottom_attach">3</property>
-                                <property name="x_options">fill</property>
+                                <property name="x_options">GTK_FILL</property>
                                 <property name="y_options"></property>
                               </packing>
                             </child>
                             <child>
                               <widget class="GtkComboBox" id="prefs-graphics-type">
                                 <property name="visible">True</property>
-                                <property name="items" translatable="no">VNC
+                                <property name="items">VNC
 Spice</property>
                                 <signal name="changed" handler="on_prefs_graphics_type_changed"/>
                               </widget>
                               <packing>
-                                <property name="left_attach">0</property>
-                                <property name="right_attach">1</property>
                                 <property name="top_attach">3</property>
                                 <property name="bottom_attach">4</property>
+                                <property name="x_options">GTK_FILL</property>
                                 <property name="x_padding">5</property>
-                                <property name="x_options">fill</property>
                               </packing>
                             </child>
                           </widget>
