--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3721,7 +3721,6 @@ I/O:</property>
                                             <child>
                                               <widget class="GtkHBox" id="network-source-mode-box">
                                                 <property name="visible">True</property>
-                                                <property name="spacing">6</property>
                                                 <child>
                                                   <widget class="GtkComboBox" id="network-source-mode-combo">
                                                     <property name="visible">True</property>
@@ -3762,6 +3761,7 @@ I/O:</property>
                                               <packing>
                                                 <property name="top_attach">3</property>
                                                 <property name="bottom_attach">4</property>
+                                                <property name="x_options">GTK_FILL</property>
                                               </packing>
                                             </child>
                                           </widget>
