--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -515,7 +515,7 @@
             <property name="tab_border">0</property>
             <property name="tab_hborder">0</property>
             <property name="tab_vborder">0</property>
-            <signal name="switch_page" handler="on_details_pages_switch_page"/>
+            <signal name="switch_page" handler="on_details_pages_switch_page" after="yes"/>
             <child>
               <widget class="GtkNotebook" id="console-pages">
                 <property name="visible">True</property>
@@ -524,6 +524,7 @@
                 <property name="tab_border">0</property>
                 <property name="tab_hborder">0</property>
                 <property name="tab_vborder">0</property>
+                <signal name="switch_page" handler="on_console_pages_switch_page" after="yes"/>
                 <child>
                   <widget class="GtkLabel" id="console-unavailable">
                     <property name="visible">True</property>
